<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:gravity="top|center"
    android:orientation="vertical"
    android:weightSum="5"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:contex=".MainActivity"
    tools:layout_editor_absoluteX="1dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_gravity="left"
        android:layout_weight=".5"
        app:srcCompat="@drawable/clippy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="573dp"
        android:layout_weight=".5"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loanAmount"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:ems="10"
            android:background="@color/white"
            android:inputType="numberDecimal"
            android:hint="@string/loan_amount" />

        <EditText
            android:id="@+id/loanApr"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/loan_ARP" />

        <EditText
            android:id="@+id/loanYears"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:ems="10"
            android:background="@color/white"
            android:inputType="number"
            android:hint="@string/loan_Years" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backbutton"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_weight=".5"
            android:text="Back" />

        <Button
            android:id="@+id/submit"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight=".5"
            android:text="Submit" />
    </LinearLayout>


</LinearLayout>